--- a/ecommerce-frontend/package.json
+++ b/ecommerce-frontend/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.27.4",
     "axios": "^1.12.2",
+    "bootstrap": "^5.3.8",
     "date-fns": "^4.1.0",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "react-scripts": "5.0.1",
