--- a/ecommerce-frontend/public/manifest.json
+++ b/ecommerce-frontend/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Fashion Store",
+  "name": "Fashion Store - Ecommerce Platform",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo1.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
