update logic hợp lý

--- a/ecommerce-frontend/public/manifest.json
+++ b/ecommerce-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Fashion Store",
-  "name": "Fashion Store - Ecommerce Platform",
+  "short_name": "PKA Shop",
+  "name": "PKA Shop - Ecommerce Platform",
   "icons": [
     {
       "src": "logo1.ico",
